--- a/gradeNewsToSC/static/chooseSources.html
+++ b/gradeNewsToSC/static/chooseSources.html
@@ -48,7 +48,10 @@
     'buzzfeed': 'http://i.newsapi.org/buzzfeed-m.png',
     'nfl-news': 'http://i.newsapi.org/nfl-news-m.png',
     't3n': 'http://i.newsapi.org/t3n-m.png',
-    'reddit-r-all': 'http://i.newsapi.org/reddit-r-all-m.png'
+    'reddit-r-all': 'http://i.newsapi.org/reddit-r-all-m.png',
+    'the-economist': 'http://i.newsapi.org/the-economist-m.png',
+    'reuters': 'http://i.newsapi.org/reuters-m.png',
+    'hacker-news': 'http://i.newsapi.org/hacker-news-m.png'
   };
 
   var loading = false;
