--- a/gradeNewsToSC/static/chooseSources.html
+++ b/gradeNewsToSC/static/chooseSources.html
@@ -6,6 +6,9 @@
     text-align: center;
     font-weight: bold;
   }
+  small {
+    font-size: 0.5em;
+  }
   .logo {
     background: transparent no-repeat center center;
     background-size: contain;
@@ -106,5 +109,5 @@
   }
 </script>
 
-<score>Select sources...</score>
+<score><small>Select sources...</small></score>
 <selectors></selectors>
